Fix import of ScannerException
Unfortunate merge conflict because #623 was tested long before #601.

--- a/javatests/jflex/testcase/ctorarg/BUILD
+++ b/javatests/jflex/testcase/ctorarg/BUILD
@@ -51,6 +51,7 @@ jflex_testsuite(
     deps = [
         "//java/jflex/util/javac",
         "//jflex/src/main/java/jflex/exceptions",
+        "//jflex/src/main/java/jflex/scanner",
         "//third_party/com/google/guava",
     ],
 )
