Cup source now requires Java 7
/home/travis/build/jflex-de/jflex/cup/cup_runtime/src/main/java/java_cup/runtime/SyntaxTreeTransform.java:[17,79] diamond operator is not supported in -source 6
  (use -source 7 or higher to enable diamond operator)

--- a/cup/cup_runtime/pom.xml
+++ b/cup/cup_runtime/pom.xml
@@ -15,4 +15,16 @@
     A copy of the Java CUP runtime.
     CUP is a LALR parser generator for Java
   </description>
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <source>7</source>
+          <target>7</target>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
 </project>
