--- a/jflex/examples/zero-reader/pom.xml
+++ b/jflex/examples/zero-reader/pom.xml
@@ -11,7 +11,7 @@
     <dependency>
       <groupId>de.jflex</groupId>
       <artifactId>cup_runtime</artifactId>
-      <version>11b</version>
+      <version>11b-20160615</version>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
