--- a/cup/cup_runtime/pom.xml
+++ b/cup/cup_runtime/pom.xml
@@ -6,14 +6,14 @@
   <parent>
     <groupId>de.jflex</groupId>
     <artifactId>cup-parent</artifactId>
-    <version>11b</version>
+    <version>11b-20160615</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
   <name>CUP runtime</name>
   <inceptionYear>1998</inceptionYear>
   <description>
     A copy of the Java CUP runtime.
-    CUP is a LALR parser generator for Java
+    CUP is a LALR parser generator for Java.
   </description>
   <build>
     <plugins>
