--- a/jflex/examples/cup-java/build.xml
+++ b/jflex/examples/cup-java/build.xml
@@ -9,7 +9,7 @@
   <target name="build" depends="clean,compile" />
 
   <target name="run" depends="compile">
-    <java classname="JavaParser" classpath="antbuild:${java_cup}">
+    <java classname="TestLexer" classpath="antbuild:${java_cup}">
       <arg line="src/main/java/TestLexer.java"/>
     </java>
   </target>
@@ -19,7 +19,7 @@
   </target>
 
   <target name="compile" depends="cup,scanner,unicode">
-    <javac destdir="antbuild" classpath="${java_cup}">
+    <javac includeantruntime="false" destdir="antbuild" classpath="${java_cup}">
       <src path="src/main/java/" />
       <src path="antbuild/"/>
     </javac>
