Upgrade cup-11b to java-cup-bin-11b-20160615 (#477)
* Upgrade cup-11b to java-cup-bin-11b-20160615

Upgrade from 11b-20150226 (see commit d945e5b8551a859675711d9903506f57eb318167 #175)
to 11b-20160615

binary release from http://www2.cs.tum.edu/projects/cup/
Sources from https://versioncontrolseidl.in.tum.de/parsergenerators/cup.git (assuming master at that date, i.e. commit fe729fe8c27441f046dab19135a38b9dde4c4e5e)
No changes in runtime.

Changelog:

UP version 0.11b 20151001 is a feature release.

Implemented a generic pre-/post DFS search with visitor support
Also added fragments of XPath 1.0 query support on parse trees
Fixed the visibility of children and the variant attribute of XMLElement


CUP version 0.11b 20150326 is a bugfix release.

Fixed an issue with empty productions having non-empty location information
Fixed an issue with deprecation of constructors

* Update java_cup.runtime with java-cup-src-11b-20160615

http://www2.cs.tum.edu/projects/cup/releases/java-cup-src-11b-20160615.tar.gz

* Cup source now requires Java 7

/home/travis/build/jflex-de/jflex/cup/cup_runtime/src/main/java/java_cup/runtime/SyntaxTreeTransform.java:[17,79] diamond operator is not supported in -source 6
  (use -source 7 or higher to enable diamond operator)

* Rename 11b to 11b-20160615

* Update version of cup in bazel via https://github.com/jflex-de/bazel_rules/pull/18

* Remove unused cup.bzl
  Follow-up of #466

* build+README adjustments in examples for cup-0.11b-20160615

--- a/cup/cup_runtime/pom.xml
+++ b/cup/cup_runtime/pom.xml
@@ -6,13 +6,25 @@
   <parent>
     <groupId>de.jflex</groupId>
     <artifactId>cup-parent</artifactId>
-    <version>11b</version>
+    <version>11b-20160615</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
   <name>CUP runtime</name>
   <inceptionYear>1998</inceptionYear>
   <description>
     A copy of the Java CUP runtime.
-    CUP is a LALR parser generator for Java
+    CUP is a LALR parser generator for Java.
   </description>
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <source>7</source>
+          <target>7</target>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
 </project>
