--- a/pom.xml
+++ b/pom.xml
@@ -85,7 +85,7 @@
   </mailingLists>
 
   <properties>
-    <cup.version>11b</cup.version>
+    <cup.version>11b-20160615</cup.version>
     <github.global.server>github</github.global.server>
     <jflex.jdk.version>1.7</jflex.jdk.version>
     <!-- 3.0.x fails to compile flex-maven-plugin https://issues.apache.org/jira/browse/MNG-5346 -->
