Make LargeInputTest run much faster by faking the scanner position
Introduce a fakeRead() that changes `yychar` so that we can fakely jump to yychar just before Integer.MAX_VALUE and make the test run in a snap.

Follow-up of #603 and #605

--- a/javatests/jflex/testcase/large_input/BUILD
+++ b/javatests/jflex/testcase/large_input/BUILD
@@ -38,6 +38,7 @@ jflex(
 
 java_library(
     name = "repeat_content_reader",
+    testonly = True,
     srcs = ["RepeatContentReader.java"],
     deps = [
         "//third_party/com/google/guava",
