Change output of //docs:html
from
bazel-bin/docs/html.html
to
bazel-bin/docs/manual.html

Thanks to https://github.com/ProdriveTechnologies/bazel-pandoc/pull/1

--- a/docs/BUILD
+++ b/docs/BUILD
@@ -36,6 +36,7 @@ pandoc(
     # TODO: Add ["--filter", "pandoc-citeproc"] when #2 is fixed
     # https://github.com/ProdriveTechnologies/bazel-pandoc/issues/2
     options = [],
+    output = "manual.html",
     to_format = "html",
 )
 
