Cherry-pick more changes from ccl-macros

--- a/jflex/src/test/java/jflex/core/BUILD
+++ b/jflex/src/test/java/jflex/core/BUILD
@@ -13,6 +13,7 @@ java_test(
     deps = [
         "//jflex/src/main/java/jflex/chars",
         "//jflex/src/main/java/jflex/core",
+        "//third_party/com/google/truth",
     ],
 )
 
