Move "NL" Constant in jflex.env.Env
This may remove an annoting dep on "Out".

--- a/jflex/src/main/java/jflex/core/BUILD
+++ b/jflex/src/main/java/jflex/core/BUILD
@@ -10,6 +10,7 @@ java_library(
         "//cup:cup_runtime",
         "//jflex/src/main/java/jflex/base",
         "//jflex/src/main/java/jflex/chars",
+        "//jflex/src/main/java/jflex/env",
         "//jflex/src/main/java/jflex/exceptions",
         "//jflex/src/main/java/jflex/io",
         "//jflex/src/main/java/jflex/l10n",
