--- a/jflex/src/main/java/jflex/logging/BUILD
+++ b/jflex/src/main/java/jflex/logging/BUILD
@@ -2,5 +2,7 @@ java_library(
     name = "logging",
     srcs = ["StdOutWriter.java"],
     visibility = ["//jflex:__subpackages__"],
-    deps = [],
+    deps = [
+        "//jflex/src/main/java/jflex/env",
+    ],
 )
