--- a/jflex/src/test/java/jflex/core/BUILD
+++ b/jflex/src/test/java/jflex/core/BUILD
@@ -4,6 +4,7 @@ java_test(
     deps = [
         "//jflex/src/main/java/jflex/chars",
         "//jflex/src/main/java/jflex/core",
+        "//third_party/com/google/truth",
     ],
 )
 
@@ -23,6 +24,7 @@ java_test(
     deps = [
         "//jflex/src/main/java/jflex/chars",
         "//jflex/src/main/java/jflex/core",
+        "//third_party/com/google/truth",
     ],
 )
 
@@ -35,5 +37,6 @@ java_test(
     deps = [
         "//jflex:testing",
         "//jflex/src/main/java/jflex/core",
+        "//third_party/com/google/truth",
     ],
 )
