Make it a compilation error when the assertion is not on a constant.

--- a/.bazelrc
+++ b/.bazelrc
@@ -244,7 +244,8 @@ build --javacopt "-Xep:ThreadLocalUsage:WARN"
 build --javacopt "-Xep:ThreadPriorityCheck:OFF"
 build --javacopt "-Xep:ThreeLetterTimeZoneID:WARN"
 build --javacopt "-Xep:ToStringReturnsNull:WARN"
-build --javacopt "-Xep:TruthAssertExpected:WARN"
+# Raised to Error, as this indicates the assertion is not on the subject.
+build --javacopt "-Xep:TruthAssertExpected:ERROR"
 build --javacopt "-Xep:TruthConstantAsserts:WARN"
 build --javacopt "-Xep:TruthIncompatibleType:WARN"
 build --javacopt "-Xep:TypeNameShadowing:WARN"
