--- a/jflex/src/test/java/jflex/unicode/BUILD
+++ b/jflex/src/test/java/jflex/unicode/BUILD
@@ -4,5 +4,6 @@ java_test(
     deps = [
         "//jflex/src/main/java/jflex/chars",
         "//jflex/src/main/java/jflex/core",
+        "//third_party/com/google/truth",
     ],
 )
