--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -22,7 +22,7 @@ bazel_build_task:
   test_all_script:
   - bazel --bazelrc=.ci.bazelrc test  --remote_http_cache=http://$CIRRUS_HTTP_CACHE_HOST  //...
   junit_artifacts:
-    path: "bazel-out/*/testlogs/**/test-results/**/test.xml"
+    path: "bazel-out/*/testlogs/**/test.xml"
     type: text/xml
     format: junit
 
