Use Truth for all test assertions (#660)
* Replace TestCase by jUnit5 @Test

* Replace by truth
  * Replace assertEquals with Truth isEqualTo
  * Replace assertTrue/assertFalse with Truth isTrue()/isFalse()
  * Replace assertNotNull by Truth
  * Structural replace; I didn't look at the details.

* Make it an error-prone ERROR when the assertion is not on a constant.

--- a/jflex/src/test/java/jflex/generator/BUILD
+++ b/jflex/src/test/java/jflex/generator/BUILD
@@ -3,6 +3,7 @@ java_test(
     srcs = ["EmitterTest.java"],
     deps = [
         "//jflex/src/main/java/jflex/generator",
+        "//third_party/com/google/truth",
     ],
 )
 
@@ -11,5 +12,6 @@ java_test(
     srcs = ["PackEmitterTest.java"],
     deps = [
         "//jflex/src/main/java/jflex/generator",
+        "//third_party/com/google/truth",
     ],
 )
