--- a/jflex/pom.xml
+++ b/jflex/pom.xml
@@ -109,7 +109,7 @@
           <includes>
             <include>**/*Test.java</include>
             <include>**/*Tests.java</include>
-            <include>**/*Properties.java</include>
+            <include>**/*Quickcheck.java</include>
           </includes>
         </configuration>
       </plugin>
