Increment error-prone checks from WARN to ERROR

--- a/.bazelrc
+++ b/.bazelrc
@@ -126,65 +126,65 @@ build --javacopt "-Xep:UnusedCollectionModifiedInPlace:ERROR"
 build --javacopt "-Xep:VarTypeName:ERROR"
 
 # On by default : WARNING
-build --javacopt "-Xep:AmbiguousMethodReference:WARN"
-build --javacopt "-Xep:ArgumentSelectionDefectChecker:WARN"
-build --javacopt "-Xep:ArrayAsKeyOfSetOrMap:WARN"
-build --javacopt "-Xep:AssertEqualsArgumentOrderChecker:WARN"
-build --javacopt "-Xep:AssertThrowsMultipleStatements:WARN"
+build --javacopt "-Xep:AmbiguousMethodReference:ERROR"
+build --javacopt "-Xep:ArgumentSelectionDefectChecker:ERROR"
+build --javacopt "-Xep:ArrayAsKeyOfSetOrMap:ERROR"
+build --javacopt "-Xep:AssertEqualsArgumentOrderChecker:ERROR"
+build --javacopt "-Xep:AssertThrowsMultipleStatements:ERROR"
 # TODO(#469) Fix these warnings
 build --javacopt "-Xep:AssertionFailureIgnored:OFF"
-build --javacopt "-Xep:AutoValueFinalMethods:WARN"
-build --javacopt "-Xep:BadAnnotationImplementation:WARN"
-build --javacopt "-Xep:BadComparable:WARN"
-build --javacopt "-Xep:BadImport:WARN"
-build --javacopt "-Xep:BadInstanceof:WARN"
-build --javacopt "-Xep:BigDecimalEquals:WARN"
-build --javacopt "-Xep:BigDecimalLiteralDouble:WARN"
+build --javacopt "-Xep:AutoValueFinalMethods:ERROR"
+build --javacopt "-Xep:BadAnnotationImplementation:ERROR"
+build --javacopt "-Xep:BadComparable:ERROR"
+build --javacopt "-Xep:BadImport:ERROR"
+build --javacopt "-Xep:BadInstanceof:ERROR"
+build --javacopt "-Xep:BigDecimalEquals:ERROR"
+build --javacopt "-Xep:BigDecimalLiteralDouble:ERROR"
 # TODO(#469) Fix these warnings
 build --javacopt "-Xep:BoxedPrimitiveConstructor:OFF"
-build --javacopt "-Xep:ByteBufferBackingArray:WARN"
-build --javacopt "-Xep:CannotMockFinalClass:WARN"
-build --javacopt "-Xep:CanonicalDuration:WARN"
+build --javacopt "-Xep:ByteBufferBackingArray:ERROR"
+build --javacopt "-Xep:CannotMockFinalClass:ERROR"
+build --javacopt "-Xep:CanonicalDuration:ERROR"
 # TODO(#469) Fix these warnings
 build --javacopt "-Xep:CatchAndPrintStackTrace:OFF"
 build --javacopt "-Xep:CatchFail:WARN"
 # TODO(#469) Fix these warnings
 build --javacopt "-Xep:ClassCanBeStatic:WARN"
 build --javacopt "-Xep:ClassNewInstance:WARN"
-build --javacopt "-Xep:CloseableProvides:WARN"
-build --javacopt "-Xep:CollectionToArraySafeParameter:WARN"
-build --javacopt "-Xep:CollectorShouldNotUseState:WARN"
-build --javacopt "-Xep:ComparableAndComparator:WARN"
-build --javacopt "-Xep:DateFormatConstant:WARN"
+build --javacopt "-Xep:CloseableProvides:ERROR"
+build --javacopt "-Xep:CollectionToArraySafeParameter:ERROR"
+build --javacopt "-Xep:CollectorShouldNotUseState:ERROR"
+build --javacopt "-Xep:ComparableAndComparator:ERROR"
+build --javacopt "-Xep:DateFormatConstant:ERROR"
 # TODO(#469/#470) Fix these errors and re-enable violation
 build --javacopt "-Xep:DefaultCharset:OFF"
 # TODO(#469) Fix these warnings
 build --javacopt "-Xep:DeprecatedThreadMethods:OFF"
-build --javacopt "-Xep:DoubleBraceInitialization:WARN"
-build --javacopt "-Xep:DoubleCheckedLocking:WARN"
-build --javacopt "-Xep:EqualsGetClass:WARN"
-build --javacopt "-Xep:EqualsHashCode:WARN"
-build --javacopt "-Xep:EqualsIncompatibleType:WARN"
-build --javacopt "-Xep:EqualsUnsafeCast:WARN"
-build --javacopt "-Xep:EqualsUsingHashCode:WARN"
-build --javacopt "-Xep:ExtendingJUnitAssert:WARN"
+build --javacopt "-Xep:DoubleBraceInitialization:ERROR"
+build --javacopt "-Xep:DoubleCheckedLocking:ERROR"
+build --javacopt "-Xep:EqualsGetClass:ERROR"
+build --javacopt "-Xep:EqualsHashCode:ERROR"
+build --javacopt "-Xep:EqualsIncompatibleType:ERROR"
+build --javacopt "-Xep:EqualsUnsafeCast:ERROR"
+build --javacopt "-Xep:EqualsUsingHashCode:ERROR"
+build --javacopt "-Xep:ExtendingJUnitAssert:ERROR"
 # TODO(#222) Increase to error when we build from jflex-1.7.1 with a lexer annotated with
 # @SuppressWarnings
 build --javacopt "-Xep:FallThrough:OFF"
-build --javacopt "-Xep:Finally:WARN"
-build --javacopt "-Xep:FloatCast:WARN"
-build --javacopt "-Xep:FloatingPointAssertionWithinEpsilon:WARN"
-build --javacopt "-Xep:FloatingPointLiteralPrecision:WARN"
+build --javacopt "-Xep:Finally:ERROR"
+build --javacopt "-Xep:FloatCast:ERROR"
+build --javacopt "-Xep:FloatingPointAssertionWithinEpsilon:ERROR"
+build --javacopt "-Xep:FloatingPointLiteralPrecision:ERROR"
 build --javacopt "-Xep:FragmentInjection:WARN"
 build --javacopt "-Xep:FragmentNotInstantiable:WARN"
-build --javacopt "-Xep:FutureReturnValueIgnored:WARN"
-build --javacopt "-Xep:GetClassOnEnum:WARN"
-build --javacopt "-Xep:HidingField:WARN"
-build --javacopt "-Xep:ImmutableAnnotationChecker:WARN"
-build --javacopt "-Xep:ImmutableEnumChecker:WARN"
-build --javacopt "-Xep:IncompatibleModifiers:WARN"
+build --javacopt "-Xep:FutureReturnValueIgnored:ERROR"
+build --javacopt "-Xep:GetClassOnEnum:ERROR"
+build --javacopt "-Xep:HidingField:ERROR"
+build --javacopt "-Xep:ImmutableAnnotationChecker:ERROR"
+build --javacopt "-Xep:ImmutableEnumChecker:ERROR"
+build --javacopt "-Xep:IncompatibleModifiers:ERROR"
 build --javacopt "-Xep:InconsistentCapitalization:WARN"
-build --javacopt "-Xep:InconsistentHashCode:WARN"
+build --javacopt "-Xep:InconsistentHashCode:ERROR"
 # TODO(#469) Fix these warnings
 build --javacopt "-Xep:IncrementInForLoopAndHeader:OFF"
 build --javacopt "-Xep:InjectOnConstructorOfAbstractClass:WARN"
