--- a/.bazelrc
+++ b/.bazelrc
@@ -9,6 +9,7 @@ test --test_output=errors
 # To avoid bugs in the code
 # P1 Fix the errors and bump from :WARN to :ERROR
 # P2 Fix the warnings and bump from :OFF to :WARN
+build --javacopt "-XepDisableWarningsInGeneratedCode"
 
 # On by default : ERROR
 build --javacopt "-Xep:ArrayEquals:ERROR"
@@ -187,81 +188,81 @@ build --javacopt "-Xep:InconsistentCapitalization:WARN"
 build --javacopt "-Xep:InconsistentHashCode:ERROR"
 # TODO(#469) Fix these warnings
 build --javacopt "-Xep:IncrementInForLoopAndHeader:OFF"
-build --javacopt "-Xep:InjectOnConstructorOfAbstractClass:WARN"
-build --javacopt "-Xep:InputStreamSlowMultibyteRead:WARN"
-build --javacopt "-Xep:InstanceOfAndCastMatchWrongType:WARN"
-build --javacopt "-Xep:IntLongMath:WARN"
-build --javacopt "-Xep:IterableAndIterator:WARN"
-build --javacopt "-Xep:JUnit3FloatingPointComparisonWithoutDelta:WARN"
-build --javacopt "-Xep:JUnit4ClassUsedInJUnit3:WARN"
-build --javacopt "-Xep:JUnitAmbiguousTestClass:WARN"
-build --javacopt "-Xep:JavaLangClash:WARN"
+build --javacopt "-Xep:InjectOnConstructorOfAbstractClass:ERROR"
+build --javacopt "-Xep:InputStreamSlowMultibyteRead:ERROR"
+build --javacopt "-Xep:InstanceOfAndCastMatchWrongType:ERROR"
+build --javacopt "-Xep:IntLongMath:ERROR"
+build --javacopt "-Xep:IterableAndIterator:ERROR"
+build --javacopt "-Xep:JUnit3FloatingPointComparisonWithoutDelta:ERROR"
+build --javacopt "-Xep:JUnit4ClassUsedInJUnit3:ERROR"
+build --javacopt "-Xep:JUnitAmbiguousTestClass:ERROR"
+build --javacopt "-Xep:JavaLangClash:ERROR"
 # TODO(#469) Fix these warnings
 build --javacopt "-Xep:JdkObsolete:OFF"
-build --javacopt "-Xep:LockNotBeforeTry:WARN"
-build --javacopt "-Xep:LogicalAssignment:WARN"
-build --javacopt "-Xep:MathAbsoluteRandom:WARN"
-build --javacopt "-Xep:MissingCasesInEnumSwitch:WARN"
-build --javacopt "-Xep:MissingFail:WARN"
+build --javacopt "-Xep:LockNotBeforeTry:ERROR"
+build --javacopt "-Xep:LogicalAssignment:ERROR"
+build --javacopt "-Xep:MathAbsoluteRandom:ERROR"
+build --javacopt "-Xep:MissingCasesInEnumSwitch:ERROR"
+build --javacopt "-Xep:MissingFail:ERROR"
 # TODO(#469) Fix these warnings
 build --javacopt "-Xep:MissingOverride:OFF"
 build --javacopt "-Xep:ModifiedButNotUsed:WARN"
-build --javacopt "-Xep:ModifyCollectionInEnhancedForLoop:WARN"
-build --javacopt "-Xep:MultipleParallelOrSequentialCalls:WARN"
+build --javacopt "-Xep:ModifyCollectionInEnhancedForLoop:ERROR"
+build --javacopt "-Xep:MultipleParallelOrSequentialCalls:ERROR"
 build --javacopt "-Xep:MutableConstantField:WARN"
-build --javacopt "-Xep:NarrowingCompoundAssignment:WARN"
-build --javacopt "-Xep:NestedInstanceOfConditions:WARN"
-build --javacopt "-Xep:NonAtomicVolatileUpdate:WARN"
-build --javacopt "-Xep:NonOverridingEquals:WARN"
-build --javacopt "-Xep:NullableConstructor:WARN"
-build --javacopt "-Xep:NullablePrimitive:WARN"
-build --javacopt "-Xep:NullableVoid:WARN"
-build --javacopt "-Xep:ObjectToString:WARN"
-build --javacopt "-Xep:ObjectsHashCodePrimitive:WARN"
-build --javacopt "-Xep:OperatorPrecedence:WARN"
-build --javacopt "-Xep:OptionalNotPresent:WARN"
-build --javacopt "-Xep:OrphanedFormatString:WARN"
-build --javacopt "-Xep:OverrideThrowableToString:WARN"
-build --javacopt "-Xep:Overrides:WARN"
-build --javacopt "-Xep:OverridesGuiceInjectableMethod:WARN"
-build --javacopt "-Xep:ParameterName:WARN"
-build --javacopt "-Xep:PreconditionsInvalidPlaceholder:WARN"
-build --javacopt "-Xep:ProtoRedundantSet:WARN"
-build --javacopt "-Xep:QualifierOrScopeOnInjectMethod:WARN"
-build --javacopt "-Xep:ReachabilityFenceUsage:WARN"
+build --javacopt "-Xep:NarrowingCompoundAssignment:ERROR"
+build --javacopt "-Xep:NestedInstanceOfConditions:ERROR"
+build --javacopt "-Xep:NonAtomicVolatileUpdate:ERROR"
+build --javacopt "-Xep:NonOverridingEquals:ERROR"
+build --javacopt "-Xep:NullableConstructor:ERROR"
+build --javacopt "-Xep:NullablePrimitive:ERROR"
+build --javacopt "-Xep:NullableVoid:ERROR"
+build --javacopt "-Xep:ObjectToString:ERROR"
+build --javacopt "-Xep:ObjectsHashCodePrimitive:ERROR"
+build --javacopt "-Xep:OperatorPrecedence:ERROR"
+build --javacopt "-Xep:OptionalNotPresent:ERROR"
+build --javacopt "-Xep:OrphanedFormatString:ERROR"
+build --javacopt "-Xep:OverrideThrowableToString:ERROR"
+build --javacopt "-Xep:Overrides:ERROR"
+build --javacopt "-Xep:OverridesGuiceInjectableMethod:ERROR"
+build --javacopt "-Xep:ParameterName:ERROR"
+build --javacopt "-Xep:PreconditionsInvalidPlaceholder:ERROR"
+build --javacopt "-Xep:ProtoRedundantSet:ERROR"
+build --javacopt "-Xep:QualifierOrScopeOnInjectMethod:ERROR"
+build --javacopt "-Xep:ReachabilityFenceUsage:ERROR"
 # TODO(#469) Fix these warnings
 build --javacopt "-Xep:ReferenceEquality:OFF"
-build --javacopt "-Xep:RequiredModifiers:WARN"
-build --javacopt "-Xep:ShortCircuitBoolean:WARN"
-build --javacopt "-Xep:StaticGuardedByInstance:WARN"
-build --javacopt "-Xep:StreamResourceLeak:WARN"
-build --javacopt "-Xep:StringSplitter:WARN"
-build --javacopt "-Xep:SwigMemoryLeak:WARN"
-build --javacopt "-Xep:SynchronizeOnNonFinalField:WARN"
-build --javacopt "-Xep:ThreadJoinLoop:WARN"
-build --javacopt "-Xep:ThreadLocalUsage:WARN"
+build --javacopt "-Xep:RequiredModifiers:ERROR"
+build --javacopt "-Xep:ShortCircuitBoolean:ERROR"
+build --javacopt "-Xep:StaticGuardedByInstance:ERROR"
+build --javacopt "-Xep:StreamResourceLeak:ERROR"
+build --javacopt "-Xep:StringSplitter:ERROR"
+build --javacopt "-Xep:SwigMemoryLeak:ERROR"
+build --javacopt "-Xep:SynchronizeOnNonFinalField:ERROR"
+build --javacopt "-Xep:ThreadJoinLoop:ERROR"
+build --javacopt "-Xep:ThreadLocalUsage:ERROR"
 # TODO(#469) Fix these warnings
 build --javacopt "-Xep:ThreadPriorityCheck:OFF"
-build --javacopt "-Xep:ThreeLetterTimeZoneID:WARN"
-build --javacopt "-Xep:ToStringReturnsNull:WARN"
-# Raised to Error, as this indicates the assertion is not on the subject.
+build --javacopt "-Xep:ThreeLetterTimeZoneID:ERROR"
+build --javacopt "-Xep:ToStringReturnsNull:ERROR"
 build --javacopt "-Xep:TruthAssertExpected:ERROR"
+# TODO(#469) Raised to Error, as this indicates the assertion is not on the subject.
 build --javacopt "-Xep:TruthConstantAsserts:WARN"
-build --javacopt "-Xep:TruthIncompatibleType:WARN"
-build --javacopt "-Xep:TypeNameShadowing:WARN"
-build --javacopt "-Xep:TypeParameterShadowing:WARN"
-build --javacopt "-Xep:TypeParameterUnusedInFormals:WARN"
-build --javacopt "-Xep:URLEqualsHashCode:WARN"
-build --javacopt "-Xep:UndefinedEquals:WARN"
+build --javacopt "-Xep:TruthIncompatibleType:ERROR"
+build --javacopt "-Xep:TypeNameShadowing:ERROR"
+build --javacopt "-Xep:TypeParameterShadowing:ERROR"
+build --javacopt "-Xep:TypeParameterUnusedInFormals:ERROR"
+build --javacopt "-Xep:URLEqualsHashCode:ERROR"
+build --javacopt "-Xep:UndefinedEquals:ERROR"
 # TODO(#469) Fix these warnings
 build --javacopt "-Xep:UnnecessaryParentheses:OFF"
-build --javacopt "-Xep:UnsafeFinalization:WARN"
-build --javacopt "-Xep:UnsafeReflectiveConstructionCast:WARN"
-build --javacopt "-Xep:UnsynchronizedOverridesSynchronized:WARN"
-build --javacopt "-Xep:UseCorrectAssertInTests:WARN"
+build --javacopt "-Xep:UnsafeFinalization:ERROR"
+build --javacopt "-Xep:UnsafeReflectiveConstructionCast:ERROR"
+build --javacopt "-Xep:UnsynchronizedOverridesSynchronized:ERROR"
+build --javacopt "-Xep:UseCorrectAssertInTests:ERROR"
 build --javacopt "-Xep:VariableNameSameAsType:WARN"
-build --javacopt "-Xep:WaitNotInLoop:WARN"
-build --javacopt "-Xep:WakelockReleasedDangerously:WARN"
+build --javacopt "-Xep:WaitNotInLoop:ERROR"
+build --javacopt "-Xep:WakelockReleasedDangerously:ERROR"
 
 #Experimental : ERROR
 #build --javacopt "-Xep:AndroidJdkLibsChecker:ERROR"
@@ -293,41 +294,42 @@ build --javacopt "-Xep:StaticOrDefaultInterfaceMethod:ERROR"
 build --javacopt "-Xep:UnlockMethod:ERROR"
 
 # Experimental : WARNING
-build --javacopt "-Xep:AnnotateFormatMethod:WARN"
-build --javacopt "-Xep:AnnotationPosition:WARN"
-build --javacopt "-Xep:AssertFalse:WARN"
-build --javacopt "-Xep:AssistedInjectAndInjectOnConstructors:WARN"
-build --javacopt "-Xep:BinderIdentityRestoredDangerously:WARN"
-build --javacopt "-Xep:BindingToUnqualifiedCommonType:WARN"
+build --javacopt "-Xep:AnnotateFormatMethod:ERROR"
+build --javacopt "-Xep:AnnotationPosition:ERROR"
+build --javacopt "-Xep:AssertFalse:ERROR"
+build --javacopt "-Xep:AssistedInjectAndInjectOnConstructors:ERROR"
+build --javacopt "-Xep:BinderIdentityRestoredDangerously:ERROR"
+build --javacopt "-Xep:BindingToUnqualifiedCommonType:ERROR"
 # TODO(#469) Fix these errors and re-enable violation
 build --javacopt "-Xep:ConstructorInvokesOverridable:OFF"
-build --javacopt "-Xep:ConstructorLeaksThis:WARN"
+build --javacopt "-Xep:ConstructorLeaksThis:ERROR"
 build --javacopt "-Xep:EmptyTopLevelDeclaration:WARN"
-build --javacopt "-Xep:EqualsBrokenForNull:WARN"
-build --javacopt "-Xep:ExpectedExceptionChecker:WARN"
+build --javacopt "-Xep:EqualsBrokenForNull:ERROR"
+build --javacopt "-Xep:ExpectedExceptionChecker:ERROR"
 build --javacopt "-Xep:FunctionalInterfaceClash:WARN"
-build --javacopt "-Xep:HardCodedSdCardPath:WARN"
+build --javacopt "-Xep:HardCodedSdCardPath:ERROR"
 # TODO(#469) Fix these errors and re-enable violation
 build --javacopt "-Xep:InconsistentOverloads:OFF"
-build --javacopt "-Xep:InvalidParam:WARN"
-build --javacopt "-Xep:InvalidTag:WARN"
-build --javacopt "-Xep:InvalidThrows:WARN"
+build --javacopt "-Xep:InvalidParam:ERROR"
+build --javacopt "-Xep:InvalidTag:ERROR"
+build --javacopt "-Xep:InvalidThrows:ERROR"
 # TODO(#469) Fix these errors and re-enable violation
 build --javacopt "-Xep:MissingDefault:OFF"
 build --javacopt "-Xep:MutableMethodReturnType:WARN"
-build --javacopt "-Xep:NoFunctionalReturnType:WARN"
-build --javacopt "-Xep:NonCanonicalStaticMemberImport:WARN"
-build --javacopt "-Xep:NullableDereference:WARN"
-build --javacopt "-Xep:PrimitiveArrayPassedToVarargsMethod:WARN"
-build --javacopt "-Xep:ProtosAsKeyOfSetOrMap:WARN"
-build --javacopt "-Xep:ProvidesFix:WARN"
-build --javacopt "-Xep:QualifierWithTypeUse:WARN"
-build --javacopt "-Xep:RedundantThrows:WARN"
-build --javacopt "-Xep:ReturnFromVoid:WARN"
-build --javacopt "-Xep:StaticQualifiedUsingExpression:WARN"
-build --javacopt "-Xep:StringEquality:WARN"
+build --javacopt "-Xep:NoFunctionalReturnType:ERROR"
+build --javacopt "-Xep:NonCanonicalStaticMemberImport:ERROR"
+build --javacopt "-Xep:NullableDereference:ERROR"
+build --javacopt "-Xep:PrimitiveArrayPassedToVarargsMethod:ERROR"
+build --javacopt "-Xep:ProtosAsKeyOfSetOrMap:ERROR"
+build --javacopt "-Xep:ProvidesFix:ERROR"
+build --javacopt "-Xep:QualifierWithTypeUse:ERROR"
+build --javacopt "-Xep:RedundantThrows:ERROR"
+build --javacopt "-Xep:ReturnFromVoid:ERROR"
+build --javacopt "-Xep:StaticQualifiedUsingExpression:ERROR"
+build --javacopt "-Xep:StringEquality:ERROR"
+# TODO(#469) GUI does this
 build --javacopt "-Xep:SystemExitOutsideMain:WARN"
-build --javacopt "-Xep:TestExceptionChecker:WARN"
+build --javacopt "-Xep:TestExceptionChecker:ERROR"
 build --javacopt "-Xep:UnnecessaryDefaultInEnumSwitch:WARN"
 # TODO(#469) Fix these warnings
 build --javacopt "-Xep:Unused:OFF"
@@ -342,41 +344,41 @@ build --javacopt "-Xep:Var:OFF"
 build --javacopt "-Xep:ClassNamedLikeTypeParameter:WARN"
 # TODO(#469) Fix these warnings
 build --javacopt "-Xep:ConstantField:OFF"
-build --javacopt "-Xep:EmptySetMultibindingContributions:WARN"
-build --javacopt "-Xep:ExpectedExceptionRefactoring:WARN"
+build --javacopt "-Xep:EmptySetMultibindingContributions:ERROR"
+build --javacopt "-Xep:ExpectedExceptionRefactoring:ERROR"
 # TODO(#469) Fix these warnings
 build --javacopt "-Xep:FieldCanBeFinal:OFF"
 # TOD(#469) We don't have a nullness checker anyway.
 build --javacopt "-Xep:FieldMissingNullable:OFF"
-build --javacopt "-Xep:ImmutableRefactoring:WARN"
-build --javacopt "-Xep:LambdaFunctionalInterface:WARN"
+build --javacopt "-Xep:ImmutableRefactoring:ERROR"
+build --javacopt "-Xep:LambdaFunctionalInterface:ERROR"
 build --javacopt "-Xep:MethodCanBeStatic:WARN"
 # TODO(#469) Fix these warnings
 build --javacopt "-Xep:MixedArrayDimensions:OFF"
 # TODO(#469) Fix these warnings
 build --javacopt "-Xep:MultiVariableDeclaration:OFF"
-build --javacopt "-Xep:MultipleTopLevelClasses:WARN"
-build --javacopt "-Xep:MultipleUnaryOperatorsInMethodCall:WARN"
+build --javacopt "-Xep:MultipleTopLevelClasses:ERROR"
+build --javacopt "-Xep:MultipleUnaryOperatorsInMethodCall:ERROR"
 build --javacopt "-Xep:PackageLocation:WARN"
-build --javacopt "-Xep:ParameterComment:WARN"
+build --javacopt "-Xep:ParameterComment:ERROR"
 build --javacopt "-Xep:ParameterNotNullable:WARN"
-build --javacopt "-Xep:PrivateConstructorForNoninstantiableModule:WARN"
+build --javacopt "-Xep:PrivateConstructorForNoninstantiableModule:ERROR"
 build --javacopt "-Xep:PrivateConstructorForUtilityClass:WARN"
 # TODO(#469) Fix these warnings
 build --javacopt "-Xep:RemoveUnusedImports:OFF"
 # TODO(#469) Fix these warnings
 build --javacopt "-Xep:ReturnMissingNullable:OFF"
-build --javacopt "-Xep:ScopeOnModule:WARN"
+build --javacopt "-Xep:ScopeOnModule:ERROR"
 build --javacopt "-Xep:SwitchDefault:WARN"
-build --javacopt "-Xep:TestExceptionRefactoring:WARN"
+build --javacopt "-Xep:TestExceptionRefactoring:ERROR"
 build --javacopt "-Xep:ThrowsUncheckedException:WARN"
 # TODO(#469) Fix these warnings
 build --javacopt "-Xep:TryFailRefactoring:OFF"
 build --javacopt "-Xep:TypeParameterNaming:WARN"
 # TODO(#469) Fix these warnings
 build --javacopt "-Xep:UngroupedOverloads:OFF"
-build --javacopt "-Xep:UnnecessarySetDefault:WARN"
-build --javacopt "-Xep:UnnecessaryStaticImport:WARN"
-build --javacopt "-Xep:UseBinds:WARN"
+build --javacopt "-Xep:UnnecessarySetDefault:ERROR"
+build --javacopt "-Xep:UnnecessaryStaticImport:ERROR"
+build --javacopt "-Xep:UseBinds:ERROR"
 # TODO(#469) Fix these warnings
 build --javacopt "-Xep:WildcardImport:OFF"
