Fix error-prone AssertionFailureIgnored

--- a/.bazelrc
+++ b/.bazelrc
@@ -132,8 +132,7 @@ build --javacopt "-Xep:ArgumentSelectionDefectChecker:ERROR"
 build --javacopt "-Xep:ArrayAsKeyOfSetOrMap:ERROR"
 build --javacopt "-Xep:AssertEqualsArgumentOrderChecker:ERROR"
 build --javacopt "-Xep:AssertThrowsMultipleStatements:ERROR"
-# TODO(#469) Fix these warnings
-build --javacopt "-Xep:AssertionFailureIgnored:OFF"
+build --javacopt "-Xep:AssertionFailureIgnored:ERROR"
 build --javacopt "-Xep:AutoValueFinalMethods:ERROR"
 build --javacopt "-Xep:BadAnnotationImplementation:ERROR"
 build --javacopt "-Xep:BadComparable:ERROR"
