Fix error-prone BoxedPrimitiveConstructor
The problem was with new Integer(). Replaced by Integer.valueOf().

--- a/.bazelrc
+++ b/.bazelrc
@@ -142,8 +142,7 @@ build --javacopt "-Xep:BadImport:ERROR"
 build --javacopt "-Xep:BadInstanceof:ERROR"
 build --javacopt "-Xep:BigDecimalEquals:ERROR"
 build --javacopt "-Xep:BigDecimalLiteralDouble:ERROR"
-# TODO(#469) Fix these warnings
-build --javacopt "-Xep:BoxedPrimitiveConstructor:OFF"
+build --javacopt "-Xep:BoxedPrimitiveConstructor:ERROR"
 build --javacopt "-Xep:ByteBufferBackingArray:ERROR"
 build --javacopt "-Xep:CannotMockFinalClass:ERROR"
 build --javacopt "-Xep:CanonicalDuration:ERROR"
