Show error-prone warnings for CatchAndPrintStackTrace, DefaultCharSet, DeprecatedThreadMethods, IncrementInForLoopAndHeader, JdkObsolete, MissingOverride, FieldCanBeFinal, RemoveUnusedImports

--- a/.bazelrc
+++ b/.bazelrc
@@ -147,7 +147,7 @@ build --javacopt "-Xep:ByteBufferBackingArray:ERROR"
 build --javacopt "-Xep:CannotMockFinalClass:ERROR"
 build --javacopt "-Xep:CanonicalDuration:ERROR"
 # TODO(#469) Fix these warnings
-build --javacopt "-Xep:CatchAndPrintStackTrace:OFF"
+build --javacopt "-Xep:CatchAndPrintStackTrace:WARN"
 build --javacopt "-Xep:CatchFail:WARN"
 build --javacopt "-Xep:ClassCanBeStatic:ERROR"
 build --javacopt "-Xep:ClassNewInstance:WARN"
@@ -157,9 +157,9 @@ build --javacopt "-Xep:CollectorShouldNotUseState:ERROR"
 build --javacopt "-Xep:ComparableAndComparator:ERROR"
 build --javacopt "-Xep:DateFormatConstant:ERROR"
 # TODO(#469/#470) Fix these errors and re-enable violation
-build --javacopt "-Xep:DefaultCharset:OFF"
+build --javacopt "-Xep:DefaultCharset:WARN"
 # TODO(#469) Fix these warnings
-build --javacopt "-Xep:DeprecatedThreadMethods:OFF"
+build --javacopt "-Xep:DeprecatedThreadMethods:WARN"
 build --javacopt "-Xep:DoubleBraceInitialization:ERROR"
 build --javacopt "-Xep:DoubleCheckedLocking:ERROR"
 build --javacopt "-Xep:EqualsGetClass:ERROR"
@@ -186,7 +186,7 @@ build --javacopt "-Xep:IncompatibleModifiers:ERROR"
 build --javacopt "-Xep:InconsistentCapitalization:WARN"
 build --javacopt "-Xep:InconsistentHashCode:ERROR"
 # TODO(#469) Fix these warnings
-build --javacopt "-Xep:IncrementInForLoopAndHeader:OFF"
+build --javacopt "-Xep:IncrementInForLoopAndHeader:WARN"
 build --javacopt "-Xep:InjectOnConstructorOfAbstractClass:ERROR"
 build --javacopt "-Xep:InputStreamSlowMultibyteRead:ERROR"
 build --javacopt "-Xep:InstanceOfAndCastMatchWrongType:ERROR"
@@ -197,14 +197,14 @@ build --javacopt "-Xep:JUnit4ClassUsedInJUnit3:ERROR"
 build --javacopt "-Xep:JUnitAmbiguousTestClass:ERROR"
 build --javacopt "-Xep:JavaLangClash:ERROR"
 # TODO(#469) Fix these warnings
-build --javacopt "-Xep:JdkObsolete:OFF"
+build --javacopt "-Xep:JdkObsolete:WARN"
 build --javacopt "-Xep:LockNotBeforeTry:ERROR"
 build --javacopt "-Xep:LogicalAssignment:ERROR"
 build --javacopt "-Xep:MathAbsoluteRandom:ERROR"
 build --javacopt "-Xep:MissingCasesInEnumSwitch:ERROR"
 build --javacopt "-Xep:MissingFail:ERROR"
 # TODO(#469) Fix these warnings
-build --javacopt "-Xep:MissingOverride:OFF"
+build --javacopt "-Xep:MissingOverride:WARN"
 build --javacopt "-Xep:ModifiedButNotUsed:WARN"
 build --javacopt "-Xep:ModifyCollectionInEnhancedForLoop:ERROR"
 build --javacopt "-Xep:MultipleParallelOrSequentialCalls:ERROR"
@@ -346,7 +346,7 @@ build --javacopt "-Xep:ConstantField:OFF"
 build --javacopt "-Xep:EmptySetMultibindingContributions:ERROR"
 build --javacopt "-Xep:ExpectedExceptionRefactoring:ERROR"
 # TODO(#469) Fix these warnings
-build --javacopt "-Xep:FieldCanBeFinal:OFF"
+build --javacopt "-Xep:FieldCanBeFinal:WARN"
 # TOD(#469) We don't have a nullness checker anyway.
 build --javacopt "-Xep:FieldMissingNullable:OFF"
 build --javacopt "-Xep:ImmutableRefactoring:ERROR"
@@ -363,8 +363,7 @@ build --javacopt "-Xep:ParameterComment:ERROR"
 build --javacopt "-Xep:ParameterNotNullable:WARN"
 build --javacopt "-Xep:PrivateConstructorForNoninstantiableModule:ERROR"
 build --javacopt "-Xep:PrivateConstructorForUtilityClass:WARN"
-# TODO(#469) Fix these warnings
-build --javacopt "-Xep:RemoveUnusedImports:OFF"
+build --javacopt "-Xep:RemoveUnusedImports:WARN"
 # TODO(#469) Fix these warnings
 build --javacopt "-Xep:ReturnMissingNullable:OFF"
 build --javacopt "-Xep:ScopeOnModule:ERROR"
