--- a/jflex/src/main/java/jflex/base/BUILD
+++ b/jflex/src/main/java/jflex/base/BUILD
@@ -1,8 +1,7 @@
-package(default_visibility = ["//visibility:public"])
-
 java_library(
     name = "base",
     srcs = glob(["*.java"]),
+    visibility = ["//jflex:__subpackages__"],
     deps = [
         "//third_party/com/google/auto_value",
     ],
