--- a/jflex/src/main/java/jflex/exceptions/BUILD
+++ b/jflex/src/main/java/jflex/exceptions/BUILD
@@ -1,6 +1,5 @@
-package(default_visibility = ["//jflex:visibility"])
-
 java_library(
     name = "exceptions",
     srcs = glob(["*.java"]),
+    visibility = ["//visibility:public"],
 )
