--- a/jflex/src/main/java/jflex/l10n/BUILD
+++ b/jflex/src/main/java/jflex/l10n/BUILD
@@ -1,7 +1,6 @@
-package(default_visibility = ["//jflex:visibility"])
-
 java_library(
     name = "l10n",
     srcs = glob(["*.java"]),
     resources = ["//jflex:resources"],
+    visibility = ["//jflex:__subpackages__"],
 )
