--- a/jflex/src/main/java/jflex/performance/BUILD
+++ b/jflex/src/main/java/jflex/performance/BUILD
@@ -1,6 +1,5 @@
-package(default_visibility = ["//jflex:visibility"])
-
 java_library(
     name = "performance",
     srcs = glob(["*.java"]),
+    visibility = ["//jflex:__subpackages__"],
 )
