--- a/java/jflex/testing/testsuite/annotations/BUILD
+++ b/java/jflex/testing/testsuite/annotations/BUILD
@@ -1,4 +1,4 @@
-package(default_visibility = ["//visibility:public"])
+package(default_visibility = ["//jflex:visibility"])
 
 java_library(
     name = "annotations",
