--- a/jflex/src/main/java/jflex/chars/BUILD
+++ b/jflex/src/main/java/jflex/chars/BUILD
@@ -1,6 +1,5 @@
-package(default_visibility = ["//jflex:visibility"])
-
 java_library(
     name = "chars",
     srcs = glob(["*.java"]),
+    visibility = ["//jflex:__subpackages__"],
 )
