Move Options.verbose in Out.verbose
Remove a cyclic dependency: verbose controls the Out verbosity, and I think it makes sense to move it there.

--- a/jflex/src/main/java/jflex/anttask/BUILD
+++ b/jflex/src/main/java/jflex/anttask/BUILD
@@ -6,6 +6,7 @@ java_library(
         "//jflex/src/main/java/jflex/core",
         "//jflex/src/main/java/jflex/exceptions",
         "//jflex/src/main/java/jflex/generator",
+        "//jflex/src/main/java/jflex/logging",
         "//third_party/org/apache/ant",
     ],
 )
